--- a/ScoreServer/ScoreServer.csproj
+++ b/ScoreServer/ScoreServer.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>9629b3e5-e6aa-4fa0-89c0-daa5a62d1b9d</ProjectGuid>
+    <ProjectGuid>{1B18D629-4D1F-4365-85B4-CA27E2BE9FB5}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ScoreServer</RootNamespace>
