--- a/HuntTheWumpus/HuntTheWumpus/HuntTheWumpus.csproj
+++ b/HuntTheWumpus/HuntTheWumpus/HuntTheWumpus.csproj
@@ -111,6 +111,7 @@
     <Compile Include="GameControl.cs" />
     <Compile Include="GUI.cs" />
     <Compile Include="Map.cs" />
+    <Compile Include="GUIStubb.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
