--- a/.gitignore
+++ b/.gitignore
@@ -147,5 +147,8 @@ Desktop.ini
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
 
+# Data files for the highscore system
+.scores
+
 # Mac crap
 .DS_Store
