--- a/HuntTheWumpus/HuntTheWumpus/HuntTheWumpus.csproj
+++ b/HuntTheWumpus/HuntTheWumpus/HuntTheWumpus.csproj
@@ -109,8 +109,10 @@
   <ItemGroup>
     <Compile Include="Cave.cs" />
     <Compile Include="GameControl.cs" />
+    <Compile Include="KeyInput.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="GUIStubb.cs" />
+    <Compile Include="MouseInput.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
