Add SpriteManager and Sprite Classes
get shooting to almost work, need a bit more debugging and the arrows
will be displayed. After this i'll start displaying the rooms with the
doors starting tomorrow (hopefully)

--- a/HuntTheWumpus/HuntTheWumpus/HuntTheWumpus.csproj
+++ b/HuntTheWumpus/HuntTheWumpus/HuntTheWumpus.csproj
@@ -118,6 +118,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
     <Compile Include="ScoreHandler.cs" />
+    <Compile Include="Sprite.cs" />
+    <Compile Include="SpriteManager.cs" />
     <Compile Include="Trivia.cs" />
   </ItemGroup>
   <ItemGroup>
