--- a/HuntTheWumpus/HuntTheWumpus/HuntTheWumpus.csproj
+++ b/HuntTheWumpus/HuntTheWumpus/HuntTheWumpus.csproj
@@ -107,6 +107,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RoomImage.cs" />
     <Compile Include="Button.cs" />
     <Compile Include="Cave.cs" />
     <Compile Include="GameControl.cs" />
